@@ -1,3 +1,8 @@
+2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b8
+
+ * New: Added nice byte input widget.
+        (Currently unused, but you never know ;) )
+
 2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b7
 
  * NEW: Added usage.php and support files for it.
